# KPN-GenAI-Lab

./: .env.example  Dockerfile  README.md  pyproject.toml  run_docker.sh
api/: app.py
data/bronze/: urls.txt
data/gold/KPN-integrated-annual-report-2024_2025/: index.faiss  index.pkl
data/gold/KPN-news-articles/: index.faiss  index.pkl
data/silver/: KPN-integrated-annual-report-2024_2025.jsonl
src/graph/: graph.py  nodes.py  router.py  state.py
src/logging/: logger.py
src/models/: llm.py
src/tools/: annual_report_agent.py  news_agent.py
src/utils/: common.py  paths.py  pdf_parser.py  web_scraper.py
src/vectorstores/: faiss.py
